--- a/index.html
+++ b/index.html
@@ -3,139 +3,172 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Negative0's Website</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>Admin Panel</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #FF0000, #000000); /* Gradient background: red to black */
-            color: #eaeaea;
+            background: linear-gradient(135deg, #1f4037, #99f2c8);
+            color: #fff;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
+            height: 100vh;
         }
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: linear-gradient(90deg, #800000, #000000); /* Gradient navbar: dark red to black */
-            padding: 1em 2em;
-            width: 100%;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+        .admin-panel {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 30px 40px;
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            width: 80%;
+            max-width: 1000px;
         }
-        .navbar a {
-            color: #eaeaea;
-            padding: 10px 15px;
-            text-decoration: none;
+
+        h2 {
+            margin-bottom: 20px;
+            font-weight: 500;
             text-align: center;
-            position: relative;
-            transition: color 0.3s, transform 0.3s;
         }
-        .navbar a::before {
-            content: '';
-            position: absolute;
-            width: 0%;
-            height: 2px;
-            bottom: 0;
-            left: 0;
-            background-color: #ff6347;
-            transition: width 0.3s;
+
+        .panel-section {
+            margin-bottom: 20px;
         }
-        .navbar a:hover {
-            color: #ff6347;
-            transform: translateY(-2px);
+
+        .panel-section h3 {
+            margin-bottom: 10px;
+            font-weight: 400;
+            border-bottom: 2px solid #4caf50;
+            padding-bottom: 5px;
         }
-        .navbar a:hover::before {
+
+        .panel-section p {
+            margin: 0 0 10px;
+        }
+
+        .panel-section input, .panel-section textarea, .panel-section select {
             width: 100%;
-        }
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #333;
-            min-width: 180px;
-            box-shadow: 0px 8px 16px rgba(0,0,0,0.5);
-            z-index: 1;
-            border-radius: 8px;
-            overflow: hidden;
-        }
-        .dropdown-content a {
-            color: #eaeaea;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-            transition: background-color 0.3s, color 0.3s;
-        }
-        .dropdown-content a:hover {
-            background-color: #ff6347;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            outline: none;
+            background: rgba(255, 255, 255, 0.1);
             color: #fff;
         }
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-        .footer {
-            background-color: #222;
+
+        .panel-section button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4caf50;
             color: white;
-            text-align: center;
-            padding: 1em 0;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            display: block;
+            margin: 10px auto;
+        }
+
+        .panel-section button:hover {
+            background-color: #45a049;
+        }
+
+        .panel-section button:active {
+            transform: scale(0.98);
+        }
+
+        .user-info-table {
             width: 100%;
-            font-size: 0.9em;
-            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
-            position: fixed;
-            bottom: 0;
+            border-collapse: collapse;
+            margin-top: 20px;
         }
-        .footer a {
-            color: #ff6347;
-            text-decoration: none;
+
+        .user-info-table th, .user-info-table td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+            color: #fff;
         }
-        .footer a:hover {
-            text-decoration: underline;
+
+        .user-info-table th {
+            background-color: #4caf50;
+            color: #fff;
+        }
+
+        .user-info-table tr:nth-child(even) {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .user-info-table tr:hover {
+            background-color: rgba(255, 255, 255, 0.2);
         }
     </style>
 </head>
 <body>
+    <div class="admin-panel">
+        <h2>Admin Panel</h2>
 
-<div class="navbar">
-    <a href="">Home</a>
-    <a href="https://negative0debuged0.github.io/Negative0Web/About">About Us</a>
-    <div class="dropdown">
-        <a href="">Socials</a>
-        <div class="dropdown-content">
-            <a href="https://www.youtube.com/channel/UCTWn1tUqbSNLrCLyunHnlcA">Youtube</a>
-            <a href="https://steamcommunity.com/id/-Negative0_Debuged0/">Steam</a>
-            <a href="https://discord.gg/kQfVYQuJGt">Discord server</a>
+        <div class="panel-section">
+            <h3>User Information</h3>
+            <p>View information about website users.</p>
+            <table class="user-info-table">
+                <thead>
+                    <tr>
+                        <th>User ID</th>
+                        <th>Username</th>
+                        <th>Operating System</th>
+                        <th>Browser</th>
+                        <th>Language</th>
+                        <th>Device Type</th>
+                        <th>Screen Resolution</th>
+                        <th>Referrer URL</th>
+                        <th>Session Duration</th>
+                        <th>User Actions</th>
+                        <th>Visit Time</th>
+                        <th>IP Address</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody id="user-info-body">
+                    <!-- User data will be dynamically populated here -->
+                </tbody>
+            </table>
         </div>
     </div>
-    <a href="https://negative0debuged0.github.io/Negative0Web/Music">Music</a>
-    <a href="https://negative0debuged0.github.io/Negative0Web/Faq">FAQ</a>
-    <a href="javascript:getUserInfo()">Admin panel</a> <!-- Call JavaScript function -->
-    <a href="https://negative0debuged0.github.io/Negative0Web/Games">Games</a>
-</div>
 
-<script>
-    function getUserInfo() {
-        // Gather user information
-        const userInfo = {
-            user: 'User1', // Example user
-            country: 'Country1', // Example country
-            deviceType: 'Desktop', // Example device type
-            language: navigator.language, // User's browser language
-            googleAccount: 'GoogleAccount1', // Example Google account name
-            screenResolution: `${window.screen.width}x${window.screen.height}`, // User's screen resolution
-            referrerURL: document.referrer, // Referrer URL
-            pagesVisited: window.location.href, // Pages visited
-            OS: getOS(navigator.userAgent), // User's operating system
-            browser: getBrowser(navigator.userAgent) // User's browser
-        };
+    <script>
+        // Function to get user information
+        async function getUserInfo() {
+            // Get user agent information
+            const userAgent = navigator.userAgent;
+            const os = getOS(userAgent);
+            const browser = getBrowser(userAgent);
+            const language = navigator.language;
+            const deviceType = getDeviceType();
+            const screenResolution = `${window.screen.width}x${window.screen.height}`;
+            const referrerURL = document.referrer;
+            const visitTime = new Date().toLocaleString();
+            const ipAddress = await fetch('https://api64.ipify.org?format=json')
+                                  .then(response => response.json())
+                                  .then(data => data.ip)
+                                  .catch(error => 'N/A');
+            const country = await fetch(`https://ipapi.co/${ipAddress}/country_name/`)
+                                  .then(response => response.text())
+                                  .catch(error => 'N/A');
+
+            // Generate random username for demonstration
+            const username = `User${Math.floor(Math.random() * 1000)}`;
+            // Generate random session duration for demonstration (in minutes)
+            const sessionDuration = Math.floor(Math.random() * 60) + 1;
+            // Random user actions for demonstration
+            const userActions = ['Clicked on homepage', 'Visited about page', 'Submitted contact form'];
+
+            return { username, os, browser, language, deviceType, screenResolution, referrerURL, sessionDuration, userActions, visitTime, ipAddress, country };
+        }
 
         // Function to get operating system from user agent
         function getOS(userAgent) {
@@ -167,20 +200,50 @@
             return browser;
         }
 
-        // Save user information to a text file
-        saveToFile(JSON.stringify(userInfo));
-    }
+        // Function to get device type
+        function getDeviceType() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 'Mobile' : 'Desktop';
+        }
 
-    // Function to save data to a text file
-    function saveToFile(data) {
-        const fileName = `${userInfo.googleAccount}.txt`; // File name based on Google account name
-        const blob = new Blob([data], { type: 'text/plain' });
-        const link = document.createElement('a');
-        link.href = window.URL.createObjectURL(blob);
-        link.download = fileName;
-        link.click();
-    }
-</script>
+        // Function to display user information in table
+        async function displayUserInfo() {
+            const userInfo = await getUserInfo();
+            const userInfoBody = document.getElementById('user-info-body');
+            const newRow = userInfoBody.insertRow();
 
+            newRow.innerHTML = `
+                <td>${Math.floor(Math.random() * 1000)}</td>
+                <td>${userInfo.username}</td>
+                <td>${userInfo.os}</td>
+                <td>${userInfo.browser}</td>
+                <td>${userInfo.language}</td>
+                <td>${userInfo.deviceType}</td>
+                <td>${userInfo.screenResolution}</td>
+                <td>${userInfo.referrerURL}</td>
+                <td>${userInfo.sessionDuration} mins</td>
+                <td>${userInfo.userActions.join('<br>')}</td>
+                <td>${userInfo.visitTime}</td>
+                <td>${userInfo.ipAddress}</td>
+                <td>${userInfo.country}</td>
+            `;
+
+            // Save user information to a text file
+            saveToFile(userInfo);
+        }
+
+        // Function to save data to a text file
+        function saveToFile(userInfo) {
+            const fileName = `UserInfo/${userInfo.username}.txt`; // File name based on username
+            const data = JSON.stringify(userInfo, null, 2); // Pretty print JSON data
+            const blob = new Blob([data], { type: 'text/plain' });
+            const link = document.createElement('a');
+            link.href = window.URL.createObjectURL(blob);
+            link.download = fileName;
+            link.click();
+        }
+
+        // Call function to display user information
+        displayUserInfo();
+    </script>
 </body>
 </html>
