--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
     </div>
     <a href="https://negative0debuged0.github.io/Negative0Web/Music">Music</a>
     <a href="https://negative0debuged0.github.io/Negative0Web/Faq">FAQ</a>
-    <a href="javascript:getUserInfo()">Admin panel</a> <!-- Call JavaScript function -->
+    <a href="https://negative0debuged0.github.io/Negative0Web/Password">Admin Panel</a>
     <a href="https://negative0debuged0.github.io/Negative0Web/Games">Games</a>
+    <a href="https://negative0debuged0.github.io/Negative0Web/Forum">Forum</a>
 </div>
 
 <script>
