--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <a href="https://negative0debuged0.github.io/Negative0Web/Faq">FAQ</a>
     <a href="https://negative0debuged0.github.io/Negative0Web/Password">Admin Panel</a>
     <a href="https://negative0debuged0.github.io/Negative0Web/Games">Games</a>
-    <a href="https://negative0debuged0.github.io/Negative0Web/Forum">Forum</a>
+    <a href="https://negative0debuged0.github.io/Negative0Web/Forums">Forum</a>
 </div>
 
 <script>
